Fixed site, added search and tags

--- a/content/inspiration/02456.md
+++ b/content/inspiration/02456.md
@@ -1,6 +1,8 @@
 ---
 title: 02456 Deep Learning
 description: Use of AI in 02456 Deep Learning
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 **Rapporteur: Jes Frellsen**
