--- a/content/inspiration/02461.md
+++ b/content/inspiration/02461.md
@@ -1,6 +1,8 @@
 ---
 title: 02461 Introduction to intelligent systems
 description: Use of AI in 02461 Introduction to intelligent systems
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 
