--- a/content/inspiration/02806.md
+++ b/content/inspiration/02806.md
@@ -1,6 +1,8 @@
 ---
 title: 02806 Social data analysis and visualization
 description: Use of AI in 02806 Social data analysis and visualization
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 
