--- a/content/inspiration/02809.md
+++ b/content/inspiration/02809.md
@@ -1,6 +1,8 @@
 ---
 title: 02809 UX Design Prototyping 
 description: Use of AI in 02809 UX Design Prototyping 
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 
