--- a/content/inspiration/26010.md
+++ b/content/inspiration/26010.md
@@ -2,6 +2,8 @@
 title: AI in 26010 Introductory Project in Chemistry**
 description: Experiencw with use of AI in 26010 Introductory Project in Chemistry**
 author: Esben Thormann
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 In 2023, I [Esben Thormann, DTU Chemistry](https://www.dtu.dk/english/person/esben-thormann?id=47654&entity=profile)  introduced the use of AI in the 'Introductory Project in
