--- a/content/inspiration/41031.md
+++ b/content/inspiration/41031.md
@@ -1,6 +1,8 @@
 ---
 title: 41031 Industrial design 1
 description: AI in 41031 Industrial design 1
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 **Course responsible:** Michael Deininger
