--- a/content/inspiration/02455.md
+++ b/content/inspiration/02455.md
@@ -1,6 +1,8 @@
 ---
 title: 02455 Experiment in Cognitive Science
 description: Use of AI in 02455 Experiment in Cognitive Science
+hiddenInHomeList: true
+tags: [ "course" ]
 ---
 
 **Rapporteur: Ivana Konvalinka**
