Also added all other missing files in the commit...

--- a/content/inspiration/02455.md
+++ b/content/inspiration/02455.md
@@ -2,10 +2,9 @@
 title: 02455 Experiment in Cognitive Science
 description: Use of AI in 02455 Experiment in Cognitive Science
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "MSc" ]
+author: Ivana Konvalinka
 ---
-
-**Rapporteur: Ivana Konvalinka**
 
 **Type of assessment:** Group oral examination and individualized group
 report with a page limit. 60% oral exam, 40% report
