--- a/content/inspiration/02456.md
+++ b/content/inspiration/02456.md
@@ -2,10 +2,9 @@
 title: 02456 Deep Learning
 description: Use of AI in 02456 Deep Learning
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "MSc" ]
+author: Jes Frellsen
 ---
-
-**Rapporteur: Jes Frellsen**
 
 Type of assessment: Oral examination and reports (hand in report first
 and the poster presentation to allow for questions based on reports)
