--- a/content/inspiration/02461.md
+++ b/content/inspiration/02461.md
@@ -2,11 +2,9 @@
 title: 02461 Introduction to intelligent systems
 description: Use of AI in 02461 Introduction to intelligent systems
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "BSc"  ]
+author: Mikkel Schmidt
 ---
-
-
-**Rapporteur: Mikkel Schmidt**
 
 **Exam:** Written examination and reports  
 Written exam (weight 40%) and individualized group report (weight 60%)  
