--- a/content/inspiration/02806.md
+++ b/content/inspiration/02806.md
@@ -2,11 +2,10 @@
 title: 02806 Social data analysis and visualization
 description: Use of AI in 02806 Social data analysis and visualization
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "MSc" ]
+author: Sune Lehmann
 ---
 
-
-**Rapporteur: Sune Lehmann**
 
 Evaluation of exercises/reports. The grading is based on an overall
 evaluation of exercises (50%) and final project report (50%).
