--- a/content/inspiration/02809.md
+++ b/content/inspiration/02809.md
@@ -2,11 +2,9 @@
 title: 02809 UX Design Prototyping 
 description: Use of AI in 02809 UX Design Prototyping 
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "MSc" ]
+author: Per Bækgaard
 ---
-
-
-**Rapporteur: Per Bækgaard**
 
 **Background**
 
