--- a/content/inspiration/34368.md
+++ b/content/inspiration/34368.md
@@ -3,7 +3,7 @@ title: Generative AI in 34368 Global Communication Infrastructure and Design
 description: Example of using generative AI (ChatGPT/CoPilot) in 34368 Global Communication Infrastructure and Design
 author: Sarah Renée Ruepp
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Electro", "MSc" ]
 ---
 
 
