--- a/content/inspiration/41031.md
+++ b/content/inspiration/41031.md
@@ -2,10 +2,9 @@
 title: 41031 Industrial design 1
 description: AI in 41031 Industrial design 1
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Construct", "BSc" ]
+author: Michael Deininger
 ---
-
-**Course responsible:** Michael Deininger
 
 **Course description**
 
