--- a/content/inspiration/02466.md
+++ b/content/inspiration/02466.md
@@ -2,7 +2,8 @@
 title: 02466 Project work - Bachelor of Artificial Intelligence and Data
 description: Use of AI in 02466 Project work - Bachelor of Artificial Intelligence and Data
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU Compute", "BSc"  ]
+author: Morten Mørup
 ---
 
 
