--- a/content/inspiration/62142.md
+++ b/content/inspiration/62142.md
@@ -3,7 +3,7 @@ title: Generative AI (ChatGPT) in 62142 Digitalization and Industry 4.0
 description: Generative AI (ChatGPT) in the B.Eng. course 62142 Digitalization and Industry 4.0
 author: Samuel Brüning Larsen
 hiddenInHomeList: true
-tags: [ "course" ]
+tags: [ "course", "DTU EngTech", "BEng" ]
 ---
 
 **Course objective:** To provide students with the skills to use GhatGPT
